--- a/stylesheets/base/_color.scss
+++ b/stylesheets/base/_color.scss
@@ -2,6 +2,7 @@ $main-color: #1338d1;
 $sub-red: #ff5059;
 
 $main-color-500: rgba(19, 56, 209, 0.5);
+$main-color-700: rgba(19, 56, 209, 0.7);
 
 $font-gray1: #2b2b2b;
 $font-gray2: #606060;
@@ -17,3 +18,10 @@ $white-500: rgba(255, 255, 255, 0.5);
 $white-100: rgba(255, 255, 255, 0.1);
 
 $card-bg: #eeeeee;
+
+$ocean: #cee4ef;
+
+$red-500: rgba(255, 80, 89, 0.7);
+$green-500: rgba(80, 234, 197, 0.7);
+
+$teacher-bg: #efefef;
