--- a/stylesheets/class.scss
+++ b/stylesheets/class.scss
@@ -9,3 +9,491 @@ body {
 	width: 100%;
 	overflow-x: hidden;
 }
+.lesson {
+	width: 100%;
+	.lesson-header {
+		width: 100%;
+		height: 45vh;
+		position: relative;
+		.lesson-header__bg {
+			width: 100%;
+			height: 100%;
+			@include flexbox();
+			@include justify-content(center);
+			@include align-items(center);
+			overflow: hidden;
+			img {
+				widows: 100%;
+			}
+		}
+		.lesson-header__filter {
+			width: 100%;
+			height: 100%;
+			background-color: $main-color-500;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+		.lesson-header__text {
+			@include box-sizing(border-box);
+			padding: 0 12%;
+			width: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			@include box-sizing(border-box);
+			padding-top: 7%;
+			.lesson-header__subtitle {
+				font-size: 1.2rem;
+				font-family: 'oACYCZno';
+				color: $font-white;
+			}
+			.lesson-header__title {
+				font-size: 2rem;
+				line-height: 2.8rem;
+				font-family: 'oACYCZno';
+				font-weight: bold;
+				color: $font-white;
+				margin-top: 1rem;
+			}
+		}
+	}
+	.lesson-content {
+		width: 100%;
+		height: auto;
+		@include box-sizing(border-box);
+		padding: 0 12%;
+		@include flexbox();
+		position: relative;
+		margin-top: -10%;
+		.lesson-content__type {
+			width: calc(92% / 3);
+			margin-left: 4%;
+			position: relative;
+			@include flexbox();
+			@include flex-direction(column);
+			@include align-items(center);
+			&:nth-of-type(1) {
+				margin-left: 0;
+			}
+			.lesson-card {
+				position: relative;
+				width: 100%;
+				background-color: $white-900;
+				@include flexbox();
+				@include flex-direction(column);
+				@include justify-content(center);
+				@include align-items(center);
+				@include box-shadow(1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5));
+				cursor: pointer;
+				&:hover {
+					.lesson-card__title {
+						color: $main-color;
+						border: 2px solid $main-color;
+						letter-spacing: 0.2rem;
+					}
+					.lesson-card__desc {
+						color: $main-color;
+					}
+				}
+				.lesson-card__title {
+					color: $font-gray2;
+					font-family: 'Do Hyeon';
+					font-size: 2.2rem;
+					width: 70%;
+					text-align: center;
+					border: 2px solid $font-gray2;
+					padding: 2rem 3rem;
+					@include box-sizing(border-box);
+					border-radius: 6rem;
+					margin-top: 5.5rem;
+					@include transition(all 0.5s ease);
+				}
+				.lesson-card__desc {
+					color: $font-gray2;
+					font-family: 'oACYCZno'; 
+					width: 60%;
+					height: 14rem;
+					font-size: 1.4rem;
+					line-height: 2.6rem;
+					word-break: keep-all;
+					word-wrap: break-word;
+					margin-top: 4.5rem;
+					text-align: center;
+				}
+				.lesson-card__price {
+					width: 100%;
+					color: $main-color;
+					font-family: 'Do Hyeon';
+					font-size: 2rem;
+					margin-top: 1.5rem;
+					text-align: center;
+				}
+				.lesson-card__price-desc {
+					width: 40%;
+					color: $font-gray3;
+					font-family: 'oACYCZno';
+					font-size: 1rem;
+					line-height: 1.8rem;
+					word-break: keep-all;
+					word-wrap: break-word;
+					margin-top: 0.5rem;
+					text-align: center;
+				}
+				.lesson-card__teacher {
+					color: $font-gray1;
+					font-family: 'oACYCZno';
+					font-weight: bold;
+					text-align: center;
+					font-size: 1.4rem;
+					width: 100%;
+					margin-top: 2.5rem;
+					cursor: default;
+				}
+				.lesson-card__teacher-profile {
+					margin-top: 2rem;
+					@include flexbox();
+					@include justify-content(center);
+					@include box-sizing(border-box);
+					padding: 0 10%;
+					height: 5rem;
+					width: 100%;
+					margin-bottom: 10rem;
+					cursor: default;
+					.teacher-profile {
+						width: 5rem;
+						height: 5rem;
+						border-radius: 50%;
+						overflow: hidden;
+						background-color: $white;
+						border: 2px solid $main-color;
+						@include flexbox();
+						@include justify-content(center);
+						@include align-items(center);
+						cursor: pointer;
+						position: relative;
+						margin-left: 7%;
+						cursor: pointer;
+						&:nth-of-type(1) {
+							margin-left: 0;
+						}
+						img {
+							position: absolute;
+							top: 5%;
+							width: 100%;
+						}
+					}
+				}
+
+			}
+			.lesson-button {
+				position: absolute;
+				z-index: 2;
+				width: 70%;
+				height: 10rem;
+				bottom: -4rem;
+				overflow: hidden;
+				cursor: pointer;
+				@include transition(all 0.5s ease);
+				&:hover {
+					@include box-shadow(1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5));
+					.lesson-button__submit {
+						letter-spacing: 0.3rem;
+					}
+				}
+				img {
+					position: absolute;
+					width: 100%;
+					top: 0;
+					left: 0;
+				}
+				.lesson-button__submit {
+					width: 100%;
+					position: absolute;
+					color: $font-white;
+					bottom: 4rem;
+					font-size: 1.6rem;
+					font-family: 'oACYCZno';
+					text-align: center;
+					letter-spacing: 0.1rem;
+					@include transition(all 0.5s ease);
+				}
+			}
+		}
+	}
+}
+.teacher {
+	width: 100%;
+	position: relative;
+	background-color: $teacher-bg;
+	@include box-sizing(border-box);
+	padding: 3% 12% 5% 12%;
+	margin-top: 12rem;
+	.teacher-wrapper {
+		width: 100%;
+		@include flexbox();
+		@include flex-wrap(wrap);
+		.teacher-profile {
+			width: 25%;
+			@include flexbox();
+			@include flex-direction(column);
+			@include align-items(center);
+			margin-top: 4rem;
+			.teacher-profile__pic {
+				width: 10rem;
+				height: 10rem;
+				position: relative;
+				border-radius: 50%;
+				background-color: $white;
+				overflow: hidden;
+				@include box-sizing(border-box);
+				border: 2px solid transparent;
+				@include transition(all 0.5s ease);
+				&:hover {
+					border: 2px solid $main-color;
+				}
+				img {
+					width: 100%;
+					position: absolute;
+					top: 7%;
+				}
+			}
+			.teacher-profile__name {
+				color: $font-gray1;
+				font-family: 'oACYCZno';
+				margin-top: 2rem;
+				font-size: 1.6rem;
+				font-weight: bold;
+			}
+			.teacher-profile__character {
+				margin-top: 1.5rem;
+				color: $font-gray2;
+				font-family: 'oACYCZno'; 
+				text-align: center;
+				font-size: 1.4rem;
+				line-height: 2.6rem;
+			}
+		}
+	}
+}
+.safety {
+	width: 100%;
+	@include box-sizing(border-box);
+	padding: 0 12%;
+	margin-top: 12rem;
+	position: relative;
+	@include flexbox();
+	@include flex-direction(column);
+	@include align-items(center);
+	.safety-indicator {
+		width: 7%;
+		img {
+			width: 100%;
+		}
+	}
+	.safety-title {
+		font-size: 2rem;
+		font-family: 'oACYCZno';
+		font-weight: bold;
+		color: $main-color;
+		margin-top: 5rem;
+		text-align: center;
+		width: 100%;
+	}
+	.safety-text {
+		font-family: 'oACYCZno';
+		font-size: 1.2rem;
+		line-height: 2.4rem;
+		margin-top: 3.5rem;
+		color: $font-gray2;
+		text-align: center;
+		width: 45%;
+		word-break: keep-all;
+		word-wrap: break-word;
+	}
+	.safety-button-wrapper {
+		margin-top: 4rem;
+		width: 100%;
+		@include flexbox();
+		@include box-sizing(border-box);
+		padding: 0 24%;
+		.safety-button {
+			margin-left: 10%;
+			width: calc(90% / 2);
+			height: 7.5rem;
+			border-radius: 7.5rem;
+			border: 2px solid #78bcff;
+			@include flexbox();
+			background-color: transparent;
+			padding-left: 3rem;
+			padding-right: 5rem;
+			@include align-items(center);
+			@include justify-content(space-between);
+			cursor: pointer;
+			&:nth-of-type(1) {
+				margin-left: 0;
+			}
+			&:hover {
+				span {
+					@include transform(translateX(10px));
+				}
+			}
+			&.orange {
+				border: 2px solid #ff5f45;
+				p {
+					color: #ff5f45;
+				}
+			}
+			p {
+				font-size: 1.8rem;
+				line-height: 1.8rem;
+				font-family: 'Do Hyeon';
+				color: #78bcff;
+			}
+			span {
+				width: 2.5rem;
+				height: 1.8rem;
+				@include flexbox();
+				@include align-items(center);
+				@include transition(all 0.5s ease);
+				img {
+					width: 100%;
+				}
+			}
+		}
+	}
+}
+.snap {
+	margin-top: 12rem;
+	width: 100%;
+	height: 40vw;
+	position: relative;
+	.snap-bg {
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
+		position: relative;
+		img {
+			position: absolute;
+			width: 100%;
+			bottom: -35%;
+		}
+	}
+	.snap-content {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 40vw;
+		.snap-content__header {
+			@include flexbox();
+			@include flex-direction(column);
+			width: 50%;
+			height: 17rem;
+			background-color: $white;
+			.snap-content__header-subtitle {
+				margin-left: 24%;
+				margin-top: 5rem;
+				font-size: 1.2rem;
+				font-family: 'oACYCZno'; 
+				color: $font-gray3;
+			}
+			.snap-content__header-title {
+				font-size: 2rem;
+				line-height: 2.8rem;
+				font-family: 'oACYCZno';
+				font-weight: bold;
+				color: $font-gray1;
+				margin-top: 1rem;
+				margin-left: 24%;
+			}
+		}
+		.snap-content__gallery {
+			width: calc((76% - 0.036%) / 4);
+			@include flexbox();
+			@include flex-direction(column);
+			margin-right: 12%;
+			position: absolute;
+			right: 0;
+			bottom: 10%;
+			.gallery-tab {
+				width: 100%;
+				height: 9vw;
+				margin-top: 2rem;
+				overflow: hidden;
+				position: relative;
+				@include flexbox();
+				@include justify-content(center);
+				@include align-items(center);
+				@include box-shadow(1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5));
+				cursor: pointer;
+				&:hover {
+					.gallery-filter {
+						opacity: 0;
+					}
+				}
+				img {
+					width: 100%;
+				}
+				.gallery-filter {
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					background-color: $main-color-500;
+					@include transition(all 0.5s ease);
+				}
+				.gallery-title {
+					width: 100%;
+					position: absolute;
+					padding-left: 5%;
+					@include box-sizing(border-box);
+					color: $font-white;
+					font-size: 1.4rem;
+					font-family: 'oACYCZno'; 
+					text-align: left;
+					bottom: 2rem;
+				}
+			}
+		}
+		.snap-content__more {
+			position: absolute;
+			bottom: 10%;
+			margin-left: 12%;
+			width: calc((76% - 0.036%) / 4);
+			height: 7.5rem;
+			border-radius: 7.5rem;
+			border: none;
+			background-color: $main-color;
+			@include box-sizing(border-box);
+			padding-left: 3rem;
+			padding-right: 3rem;
+			@include flexbox();
+			@include align-items(center);
+			@include justify-content(space-between);
+			cursor: pointer;
+			&:hover {
+				span {
+					@include transform(translateX(10px));
+				}
+			}
+			p{
+				font-size: 1.8rem;
+				line-height: 1.8rem;
+				font-family: 'Do Hyeon';
+				color: $font-white;
+			}
+			span {
+				width: 2.5rem;
+				height: 1.8rem;
+				@include flexbox();
+				@include align-items(center);
+				@include transition(all 0.5s ease);
+				img {
+					width: 100%;
+				}
+			}
+		}
+	}
+}
