--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -34,8 +34,22 @@ body { width: 100%; overflow-x: hidden; }
 .header .header-right .header__weather .waether-dir .dir-down { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
 .header .header-right .header__weather .waether-dir .dir-down img { cursor: pointer; width: 60%; -webkit-transform: rotate(180deg); -ms-transform: rotate(180deg); transform: rotate(180deg); }
 .header .header-right .header__nav { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; height: 30%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 18%; }
-.header .header-right .header__nav .nav-tab { width: calc(100% / 3); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; cursor: pointer; }
+.header .header-right .header__nav .nav-tab { width: calc(100% / 3); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; cursor: pointer; text-decoration: none; }
 .header .header-right .header__nav .nav-tab.active { width: calc(100% / 3); height: 100%; background: url("../../images/common/wave-red.svg"); background-size: 20%; background-position: center center; background-repeat: no-repeat; }
-.header .header-right .header__nav .nav-tab a { text-decoration: none; font-family: 'Do Hyeon', sans-serif; color: #1338d1; font-size: 1.8rem; }
+.header .header-right .header__nav .nav-tab p { font-family: 'Do Hyeon', sans-serif; color: #1338d1; font-size: 1.8rem; }
+
+.mobile-menu { display: none; }
+
+@media screen and (min-width: 320px) and (max-width: 800px) { .header { width: 100%; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; border-bottom: 2px solid #1338d1; }
+  .header .header-left { width: 100%; height: 8.5rem; border-right: none; padding-left: 0; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; border-bottom: 2px solid #1338d1; }
+  .header .header-left .header__logo { width: 16%; padding-right: 0; }
+  .header .header-left .header__logo a { width: 100%; margin-top: 0; }
+  .header .header-left .header__logo a img { width: 100%; }
+  .header .header-left .header__brand { width: 100%; padding-right: 0; margin-top: 0.6rem; }
+  .header .header-left .header__brand a { width: 100%; font-size: 1rem; line-height: 1.2rem; }
+  .header .header-right { width: 100%; height: auto; }
+  .header .header-right .header__weather { display: none; }
+  .header .header-right .header__nav { height: 3.5rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 0; }
+  .header .header-right .header__nav .nav-tab a { font-size: 1.6rem; } }
 
 /*# sourceMappingURL=header.css.map */
