--- a/stylesheets/css/index.css
+++ b/stylesheets/css/index.css
@@ -8,30 +8,28 @@ html { font-size: 10px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoot
 body { width: 100%; overflow-x: hidden; }
 
 .slider { width: 100%; height: 50vh; overflow: hidden; position: relative; }
-.slider .slider-wrapper { width: 100%; }
-.slider .slider-wrapper .slide { position: relative; width: 100%; height: 50vh; }
+.slider .slider-wrapper { width: 100%; position: absolute; }
+.slider .slider-wrapper .slide { position: relative; width: 100%; height: 50vh; display: inline-block; float: left; }
 .slider .slider-wrapper .slide .slide-image { position: relative; width: 100%; height: 50vh; overflow: hidden; }
 .slider .slider-wrapper .slide .slide-image img { position: absolute; width: 100%; }
-.slider .slider-wrapper .slide .slide-filter { position: absolute; width: 100%; height: 100%; background-color: rgba(19, 56, 209, 0.5); top: 0; left: 0; }
+.slider .slider-wrapper .slide .slide-filter { position: absolute; width: 100%; height: 100%; background-color: rgba(19, 56, 209, 0.7); top: 0; left: 0; }
 .slider .slider-wrapper .slide .slide-sideblur { position: absolute; width: 7%; height: 100%; top: 0; left: 0; margin-right: 3%; background-color: rgba(255, 255, 255, 0.5); }
+.slider .slider-wrapper .slide .slide-sideblur .sideblur-text { width: 42vh; height: 7vw; color: #1338d1; font-size: 1.6rem; line-height: 2.8rem; font-family: 'Do Hyeon'; -webkit-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg); -webkit-transform-origin: bottom center; -ms-transform-origin: bottom center; transform-origin: bottom center; position: absolute; top: -10%; left: -2rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
 .slider .slider-wrapper .slide .slide-content { position: absolute; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; width: 76%; height: 100%; margin-left: 12%; top: 0; left: 0; }
 .slider .slider-wrapper .slide .slide-content .content-text { width: calc((99.952% * 0.5) + 0.016%); height: 100%; color: white; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-top: 5%; }
 .slider .slider-wrapper .slide .slide-content .content-text .content-text__title { font-size: 9rem; font-family: 'OTEnjoystoriesBA'; font-weight: bolder; }
 .slider .slider-wrapper .slide .slide-content .content-text .content-text__subtitle { font-size: 1.8rem; font-family: 'oACYCZno'; font-weight: bold; margin-top: 2.5rem; }
 .slider .slider-wrapper .slide .slide-content .content-text .content-text__desc { font-size: 1.2rem; line-height: 2.4rem; font-family: 'oACYCZno'; margin-top: 1.8rem; width: 60%; word-break: keep-all; word-wrap: break-word; }
-.slider .slider-wrapper .slide .slide-content .content-img { width: 34%; }
+.slider .slider-wrapper .slide .slide-content .content-img { width: 34%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
 .slider .slider-wrapper .slide .slide-content .content-img img { width: 100%; }
 .slider .slider-control { width: 60%; position: absolute; bottom: 5%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 12%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: flex-end; -moz-align-items: flex-end; -ms-align-items: flex-end; align-items: flex-end; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; }
-.slider .slider-control .control-navigation { width: 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; }
-.slider .slider-control .control-navigation .navigation-dot { width: 2rem; height: 2rem; background-color: #cccccc; cursor: pointer; }
-.slider .slider-control .control-navigation .navigation-dot.active { background-color: #ff5059; }
+.slider .slider-control .control-navigation { width: 8%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; margin-bottom: 2rem; }
+.slider .slider-control .control-navigation .navigation-dot { width: 1rem; height: 1rem; background-color: #cccccc; cursor: pointer; }
+.slider .slider-control .control-navigation .navigation-dot.current { background-color: #ff5059; }
 .slider .slider-control .control-arrow { width: 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: flex-end; -moz-align-items: flex-end; -ms-align-items: flex-end; align-items: flex-end; }
-.slider .slider-control .control-arrow .control-arrow__prev { width: 50%; }
-.slider .slider-control .control-arrow .control-arrow__prev img { width: 70%; cursor: pointer; }
-.slider .slider-control .control-arrow .control-arrow__prev img:hover { opacity: 0.7; }
-.slider .slider-control .control-arrow .control-arrow__next { width: 50%; }
-.slider .slider-control .control-arrow .control-arrow__next img { width: 70%; cursor: pointer; }
-.slider .slider-control .control-arrow .control-arrow__next img:hover { opacity: 0.7; }
+.slider .slider-control .control-arrow .control-arrow-btn { width: 50%; }
+.slider .slider-control .control-arrow .control-arrow-btn img { width: 70%; cursor: pointer; }
+.slider .slider-control .control-arrow .control-arrow-btn img:hover { opacity: 0.7; }
 
 .review { width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; margin-top: 8rem; }
 .review .review-wrapper { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; }
@@ -69,7 +67,8 @@ body { width: 100%; overflow-x: hidden; }
 .lesson .lesson-content .lesson-content__type:nth-of-type(1) { margin-left: 0; }
 .lesson .lesson-content .lesson-content__type .lesson-card { position: relative; width: 100%; background-color: rgba(255, 255, 255, 0.9); display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); cursor: pointer; }
 .lesson .lesson-content .lesson-content__type .lesson-card:hover .lesson-card__title { color: #1338d1; border: 2px solid #1338d1; letter-spacing: 0.2rem; }
-.lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__title { color: #606060; font-family: 'Do Hyeon'; font-size: 1.8rem; width: 70%; text-align: center; border: 2px solid #606060; padding: 2rem 3rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-radius: 6rem; margin-top: 5.5rem; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.lesson .lesson-content .lesson-content__type .lesson-card:hover .lesson-card__desc { font-weight: bold; color: #1338d1; }
+.lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__title { color: #606060; font-family: 'Do Hyeon'; font-size: 2.5rem; width: 70%; text-align: center; border: 2px solid #606060; padding: 2rem 3rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-radius: 6rem; margin-top: 5.5rem; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__desc { color: #606060; font-family: 'oACYCZno'; width: 55%; height: 12rem; font-size: 1.2rem; line-height: 2.2rem; word-break: keep-all; word-wrap: break-word; margin-top: 4.5rem; text-align: center; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher { color: #2b2b2b; font-family: 'oACYCZno'; font-weight: bold; text-align: center; font-size: 1.4rem; width: 100%; margin-top: 2rem; cursor: default; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile { margin-top: 2rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; height: 5rem; width: 100%; margin-bottom: 10rem; cursor: default; }
@@ -78,9 +77,9 @@ body { width: 100%; overflow-x: hidden; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile img { position: absolute; top: 5%; width: 100%; }
 .lesson .lesson-content .lesson-content__type .lesson-button { position: absolute; z-index: 2; width: 70%; height: 10rem; bottom: -4rem; overflow: hidden; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .lesson .lesson-content .lesson-content__type .lesson-button:hover { -webkit-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); }
-.lesson .lesson-content .lesson-content__type .lesson-button:hover .lesson-button__submit { letter-spacing: 0.4rem; }
+.lesson .lesson-content .lesson-content__type .lesson-button:hover .lesson-button__submit { letter-spacing: 0.3rem; }
 .lesson .lesson-content .lesson-content__type .lesson-button img { position: absolute; width: 100%; top: 0; left: 0; }
-.lesson .lesson-content .lesson-content__type .lesson-button .lesson-button__submit { width: 100%; position: absolute; color: white; bottom: 4rem; font-size: 1.2rem; font-family: 'oACYCZno'; font-weight: bold; text-align: center; letter-spacing: 0.2rem; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.lesson .lesson-content .lesson-content__type .lesson-button .lesson-button__submit { width: 100%; position: absolute; color: white; bottom: 4rem; font-size: 1.6rem; font-family: 'oACYCZno'; text-align: center; letter-spacing: 0.1rem; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 
 .safety { width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; margin-top: 12rem; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
 .safety .safety-indicator { width: 7%; }
@@ -92,7 +91,8 @@ body { width: 100%; overflow-x: hidden; }
 .safety .safety-button-wrapper .safety-button:nth-of-type(1) { margin-left: 0; }
 .safety .safety-button-wrapper .safety-button:hover span { -webkit-transform: translateX(10px); -ms-transform: translateX(10px); transform: translateX(10px); }
 .safety .safety-button-wrapper .safety-button.orange { border: 2px solid #ff5f45; }
-.safety .safety-button-wrapper .safety-button p { font-size: 1.6rem; line-height: 1.8rem; font-family: 'Do Hyeon'; color: #606060; }
+.safety .safety-button-wrapper .safety-button.orange p { color: #ff5f45; }
+.safety .safety-button-wrapper .safety-button p { font-size: 1.8rem; line-height: 1.8rem; font-family: 'Do Hyeon'; color: #78bcff; }
 .safety .safety-button-wrapper .safety-button span { width: 2.5rem; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .safety .safety-button-wrapper .safety-button span img { width: 100%; }
 
@@ -111,23 +111,23 @@ body { width: 100%; overflow-x: hidden; }
 .snap .snap-content .snap-content__gallery .gallery-tab .gallery-title { width: 100%; position: absolute; padding-left: 5%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; color: white; font-size: 1.4rem; font-family: 'oACYCZno'; text-align: left; bottom: 2rem; }
 .snap .snap-content .snap-content__more { position: absolute; bottom: 10%; margin-left: 12%; width: calc((76% - 0.036%) / 4); height: 7.5rem; border-radius: 7.5rem; border: none; background-color: #1338d1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 3rem; padding-right: 3rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; cursor: pointer; }
 .snap .snap-content .snap-content__more:hover span { -webkit-transform: translateX(10px); -ms-transform: translateX(10px); transform: translateX(10px); }
-.snap .snap-content .snap-content__more p { font-size: 1.6rem; line-height: 1.8rem; font-family: 'Do Hyeon'; color: white; }
+.snap .snap-content .snap-content__more p { font-size: 1.8rem; line-height: 1.8rem; font-family: 'Do Hyeon'; color: white; }
 .snap .snap-content .snap-content__more span { width: 2.5rem; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .snap .snap-content .snap-content__more span img { width: 100%; }
 
-.rent { margin-top: 12rem; width: 100%; height: 35vw; position: relative; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
+.rent { margin-top: 16rem; width: 100%; height: 35vw; position: relative; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
 .rent .rent-image { width: 80%; height: 35vw; overflow: hidden; position: relative; }
 .rent .rent-image img { width: 100%; position: absolute; bottom: -20%; }
 .rent .rent-content { position: absolute; width: 25%; height: 30vw; right: 12%; -webkit-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); }
 .rent .rent-content .rent-content__bg { width: 100%; height: 100%; position: relative; overflow: hidden; }
 .rent .rent-content .rent-content__bg img { height: 100%; position: absolute; top: 0; left: 0; }
-.rent .rent-content .rent-conent__text { width: 100%; height: 100%; position: absolute; top: 0; left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-align-items: flex-end; -moz-align-items: flex-end; -ms-align-items: flex-end; align-items: flex-end; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 10%; }
+.rent .rent-content .rent-conent__text { width: 100%; height: 100%; position: absolute; top: 0; left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-align-items: flex-end; -moz-align-items: flex-end; -ms-align-items: flex-end; align-items: flex-end; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 13%; }
 .rent .rent-content .rent-conent__text .rent-content__subtitle { font-size: 1.2rem; font-family: 'oACYCZno'; color: #999999; text-align: right; }
 .rent .rent-content .rent-conent__text .rent-content__title { width: 80%; font-size: 2rem; line-height: 2.8rem; font-family: 'oACYCZno'; font-weight: bold; color: #2b2b2b; margin-top: 1rem; text-align: right; word-break: keep-all; word-wrap: break-word; }
 .rent .rent-content .rent-conent__text .rent-content__desc { width: 80%; text-align: right; word-break: keep-all; word-wrap: break-word; font-family: 'oACYCZno'; color: #606060; font-size: 1.2rem; line-height: 2.2rem; margin-top: 5rem; }
 .rent .rent-content .rent-conent__text .rent-content__more { width: 80%; height: 7.5rem; border-radius: 7.5rem; border: none; background-color: #1338d1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 3rem; padding-right: 3rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; cursor: pointer; margin-top: 5rem; }
 .rent .rent-content .rent-conent__text .rent-content__more:hover span { -webkit-transform: translateX(10px); -ms-transform: translateX(10px); transform: translateX(10px); }
-.rent .rent-content .rent-conent__text .rent-content__more p { font-size: 1.6rem; line-height: 1.8rem; font-family: 'Do Hyeon'; color: white; }
+.rent .rent-content .rent-conent__text .rent-content__more p { font-size: 1.8rem; line-height: 1.8rem; font-family: 'Do Hyeon'; color: white; }
 .rent .rent-content .rent-conent__text .rent-content__more span { width: 2.5rem; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .rent .rent-content .rent-conent__text .rent-content__more span img { width: 100%; }
 
