--- a/stylesheets/css/location.css
+++ b/stylesheets/css/location.css
@@ -1,11 +1,52 @@
-@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville");
-@import url("https://fonts.googleapis.com/css?family=Prata");
-@import url("https://fonts.googleapis.com/css?family=Nanum+Gothic");
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,700,900");
-@import url("https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css");
-@import url("https://fonts.googleapis.com/css?family=Noto+Serif+KR:400,700");
+@import url("https://fonts.googleapis.com/css?family=Do+Hyeon");
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700");
+@font-face { font-family: 'oACYCZno'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/oACYCZno.woff") format("woff"); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'Lachata'; src: url("../../font/Lachata.ttf.eot") format("embedded-opentype"); src: url("../../font/Lachata.ttf.eot?#iefix") format("embedded-opentype"), url("../../font/Lachata.ttf.woff") format("woff"); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'OTEnjoystoriesBA'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff") format("woff"); font-weight: normal; font-style: normal; }
 html { font-size: 10px; }
 
 body { width: 100%; overflow-x: hidden; }
+
+.location { position: relative; width: 100%; height: 65vh; }
+.location .location-map { width: 100%; height: 100%; overflow: hidden; background-color: #cee4ef; position: relative; }
+.location .location-map img { width: 90%; position: absolute; bottom: -0.3rem; left: -5%; }
+.location .location-content { position: absolute; width: 100%; margin-top: 6%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; top: 0; left: 0; }
+.location .location-content .location-content__header { position: relative; width: 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
+.location .location-content .location-content__header .content-header__subtitle { width: 100%; font-size: 1.2rem; font-family: 'oACYCZno'; color: #999999; text-align: left; }
+.location .location-content .location-content__header .content-header__title { width: 100%; font-size: 2rem; line-height: 2.8rem; font-family: 'oACYCZno'; font-weight: bold; color: #2b2b2b; margin-top: 1rem; text-align: left; word-break: keep-all; word-wrap: break-word; }
+.location .location-content .location-content__link { position: relative; width: 25%; margin-top: 8rem; }
+.location .location-content .location-content__link .content-link__btn { width: 80%; height: 7.5rem; border-radius: 7.5rem; border: none; background-color: #1338d1; margin-left: -3rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 3rem; padding-right: 5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; cursor: pointer; margin-top: 2rem; }
+.location .location-content .location-content__link .content-link__btn:hover span { -webkit-transform: translateX(10px); -ms-transform: translateX(10px); transform: translateX(10px); }
+.location .location-content .location-content__link .content-link__btn p { font-size: 1.8rem; line-height: 1.8rem; font-family: 'Do Hyeon'; color: white; }
+.location .location-content .location-content__link .content-link__btn span { width: 2.5rem; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.location .location-content .location-content__link .content-link__btn span img { width: 100%; }
+
+.location-info { margin-top: 4rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; position: relative; }
+.location-info .info-tab-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; width: 50%; margin-right: 25%; }
+.location-info .info-tab-wrapper .info-tab { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; width: 50%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 7%; position: relative; }
+.location-info .info-tab-wrapper .info-tab .info-tab__header { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
+.location-info .info-tab-wrapper .info-tab .info-tab__header .tab-header-icon { width: 20%; margin-right: 5%; }
+.location-info .info-tab-wrapper .info-tab .info-tab__header .tab-header-icon img { width: 100%; }
+.location-info .info-tab-wrapper .info-tab .info-tab__header .tab-header__title { width: 65%; font-size: 1.6rem; font-family: 'oACYCZno'; font-weight: bold; color: #2b2b2b; }
+.location-info .info-tab-wrapper .info-tab .info-tab__content { width: 100%; margin-top: 2rem; line-height: 2.2rem; font-family: 'oACYCZno'; font-size: 1.4rem; }
+.location-info .info-book { width: 25%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 7%; }
+.location-info .info-book:hover .info-tab__book { letter-spacing: 0.3rem; }
+.location-info .info-book .info-tab__book { width: 100%; height: 7.5rem; border-radius: 7.5rem; border: none; background-color: #1338d1; font-size: 1.6rem; font-family: 'Do Hyeon'; color: white; cursor: pointer; letter-spacing: 0.1rem; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+
+.ad { margin-top: 12rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; }
+.ad .ad-tab { width: calc(100% / 3); height: 15vw; position: relative; cursor: pointer; }
+.ad .ad-tab:hover .ad-tab__img img { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); }
+.ad .ad-tab:hover .ad-tab__text span { -webkit-transform: translateX(10px); -ms-transform: translateX(10px); transform: translateX(10px); }
+.ad .ad-tab:nth-of-type(1) .ad-tab__img { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; }
+.ad .ad-tab:nth-of-type(1) .ad-tab__img img { width: unset; height: 100%; }
+.ad .ad-tab .ad-tab__img { width: 100%; height: 100%; position: relative; overflow: hidden; }
+.ad .ad-tab .ad-tab__img img { width: 100%; -webkit-transform: scale(1.05); -ms-transform: scale(1.05); transform: scale(1.05); -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.ad .ad-tab .ad-tab__filter { width: 100%; height: 100%; position: absolute; top: 0; left: 0; background-color: rgba(19, 56, 209, 0.7); }
+.ad .ad-tab .ad-tab__filter.red { background-color: rgba(255, 80, 89, 0.7); }
+.ad .ad-tab .ad-tab__filter.green { background-color: rgba(80, 234, 197, 0.7); }
+.ad .ad-tab .ad-tab__text { width: 100%; height: 100%; position: absolute; top: 0; left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 5% 10%; }
+.ad .ad-tab .ad-tab__text .text-title { width: 100%; text-align: center; font-size: 1.8rem; color: white; font-family: 'Do Hyeon'; }
+.ad .ad-tab .ad-tab__text span { margin-top: 2rem; width: 40%; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.ad .ad-tab .ad-tab__text span img { width: 100%; }
 
 /*# sourceMappingURL=location.css.map */
