--- a/stylesheets/footer.scss
+++ b/stylesheets/footer.scss
@@ -10,6 +10,98 @@ body {
 	overflow-x: hidden;
 }
 .footer {
-	margin-top: 12rem;
+	margin-top: 16rem;
 	width: 100%;
+	@include flexbox();
+	@include flex-direction(column);
+	@include align-items(center);
+	@include justify-content(center);
+	@include box-sizing(border-box);
+	padding-top: 3%;
+	padding-bottom: 3%;
+	background-color: $main-color;
+	.footer-logo {
+		width: 6%;
+		img {
+			width: 100%;
+		}
+	}
+	.footer-sns {
+		margin-top: 3rem;
+		height: 8rem;
+		@include flexbox();
+		@include justify-content(center);
+		.sns-tab {
+			@include flexbox();
+			@include flex-direction(column);
+			@include align-items(center);
+			width: 10rem;
+			position: relative;
+			.sns-tab__icon {
+				width: 4rem;
+				height: 4rem;
+				cursor: pointer;				
+			}	
+			.sns-tab__tooltip {
+				position: relative;
+				width: 7rem;
+				padding: 7% 0;
+				color: $font-white;
+				font-family: 'Do Hyeon';
+				font-size: 1.4rem;
+				letter-spacing: 0.1rem;
+				text-align: center;
+				background-color: $sub-red;
+				border-radius: 0.5rem;
+				opacity: 0;
+				@include flexbox();
+				@include justify-content(center);
+				margin-top: 0.3rem;
+				&:before {
+					content: '';
+					width: 0.6rem;
+					height: 0.6rem;
+					display: block;
+					border-top: 10px solid $sub-red;
+					border-left: 10px solid $sub-red;
+					border-radius: 0.5rem;
+					@include transform(rotate(45deg));
+					position: absolute;
+					top: -0.5rem;
+				}
+			}
+		}
+	}
+	.footer-rights {
+		text-align: center;
+		color: $font-white;
+		font-size: 1.2rem;
+		font-family: 'oACYCZno'; 
+	}
+}
+@media screen and (min-width: 320px) and (max-width: 800px) {
+	.footer {
+		padding-top: 7%;
+		padding-bottom: 7%;
+		.footer-logo {
+			width: 18%;
+		}
+		.footer-sns {
+			height: 6rem;
+			.sns-tab {
+				width: 7rem;
+				.sns-tab__icon {
+					width: 3rem;
+					height: 3rem;			
+				}	
+				.sns-tab__tooltip {					
+					font-size: 1.2rem;					
+					margin-top: 0.3rem;					
+				}
+			}
+		}
+		.footer-rights {
+			font-size: 0.9rem;
+		}
+	}
 }
