--- a/stylesheets/header.scss
+++ b/stylesheets/header.scss
@@ -192,6 +192,7 @@ body {
 				@include justify-content(center);
 				@include align-items(center);
 				cursor: pointer;
+				text-decoration: none;
 				&.active {
 					width: calc(100% / 3);
 					height: 100%;
@@ -200,11 +201,66 @@ body {
 					background-position: center center;
 					background-repeat: no-repeat;
 				}
-				a {
-					text-decoration: none;
+				p {	
 					font-family: 'Do Hyeon', sans-serif;
 					color: $main-color;
 					font-size: 1.8rem;
+				}
+			}
+		}
+	}
+}
+.mobile-menu {
+	display: none;
+}
+@media screen and (min-width: 320px) and (max-width: 800px) {
+	.header {
+		width: 100%;
+		@include flex-direction(column);
+		border-bottom: 2px solid $main-color;
+		.header-left {
+			width: 100%;
+			height: 8.5rem;
+			border-right: none;
+			padding-left: 0;
+			@include align-items(center);
+			border-bottom: 2px solid $main-color;
+			.header__logo {
+				width: 16%;
+				padding-right: 0;
+				a {
+					width: 100%;
+					margin-top: 0;
+					img {
+						width: 100%;
+					}
+				}
+			}
+			.header__brand {
+				width: 100%;
+				padding-right: 0;
+				margin-top: 0.6rem;
+				a {
+					width: 100%;
+					font-size: 1rem;
+					line-height: 1.2rem;
+				}
+			}
+		}
+		.header-right {
+			width: 100%;
+			height: auto;
+			.header__weather {
+				display: none;
+			}
+			.header__nav {				
+				height: 3.5rem;
+				@include box-sizing(border-box);
+				padding-right: 0;
+				.nav-tab {
+					a {						
+						font-size: 1.6rem;
+					}
 				}
 			}
 		}
